Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138910

Linguist: Assert in Navigation

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.11.0 FF
    • 6.11
    • Tools: Linguist
    • None
    • macOS
    • 904abd807 (dev)

      .h2 How to reproduce

      • Build Linguist with debug symbols.
      • Open a .ts file with missing translations (for me it was qttranslations/translations/qtwebsockets_pl.ts in dev branch)
      • select 'previous unfinished item'

      Linguist asserts with

      ASSERT: "index.isValid()" in file /Users/kkoehne/dev/qt/dev/src/qttools/src/linguist/linguist/messagemodel.cpp, line 1680
      

        For Gerrit Dashboard: QTBUG-138910
        # Subject Branch Project Status CR V

            masoud.jami Masoud Jami
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes